--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "dotenv": "^16.5.0",
     "expo": "53.0.9",
     "expo-auth-session": "~6.1.5",
-    "expo-camera": "~16.1.6",
+    "expo-camera": "~16.1.8",
     "expo-crypto": "~14.1.4",
     "expo-dev-client": "~5.1.8",
     "expo-document-picker": "~13.1.5",
@@ -130,12 +130,14 @@
     "react-redux": "^9.1.2",
     "tesseract.js": "^6.0.1",
     "testproxy": "^1.3.4",
-    "twilio": "^5.5.2"
+    "twilio": "^5.5.2",
+    "expo-modules-core": "~2.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
     "@react-native-community/cli": "^18.0.0",
     "@react-native/codegen": "^0.79.2",
+    "depcheck": "^1.4.7",
     "patch-package": "^8.0.0"
   },
   "private": true,
