--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/stack": "^6.3.16",
-    "@reduxjs/toolkit": "^1.9.5",
+    "@reduxjs/toolkit": "^2.8.2",
     "@tensorflow-models/coco-ssd": "^2.2.3",
     "@tensorflow-models/mobilenet": "^2.1.1",
     "@tensorflow/tfjs": "^4.22.0",
@@ -75,6 +75,7 @@
     "expo-image-manipulator": "~13.1.7",
     "expo-image-picker": "~16.1.4",
     "expo-module-scripts": "^4.0.4",
+    "expo-modules-core": "~2.4.0",
     "expo-random": "^14.0.1",
     "expo-splash-screen": "~0.30.8",
     "expo-status-bar": "~2.2.3",
@@ -96,7 +97,8 @@
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "png-js": "^1.0.0",
-    "react": "19.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-native": "^0.79.2",
     "react-native-animatable": "^1.4.0",
     "react-native-canvas": "^0.1.40",
@@ -130,8 +132,7 @@
     "react-redux": "^9.1.2",
     "tesseract.js": "^6.0.1",
     "testproxy": "^1.3.4",
-    "twilio": "^5.5.2",
-    "expo-modules-core": "~2.4.0"
+    "twilio": "^5.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
