--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "@expo/config-plugins": "~10.0.0",
     "@expo/vector-icons": "^14.1.0",
     "@google-cloud/vision": "^5.1.0",
-    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/slider": "4.5.6",
     "@react-native-cookies/cookies": "^6.2.1",
     "@react-native-google-signin/google-signin": "^13.2.0",
@@ -63,7 +63,6 @@
     "cloudinary": "^2.4.0",
     "cors": "^2.8.5",
     "deprecated-react-native-prop-types": "^5.0.0",
-    "dotenv": "^16.5.0",
     "expo": "53.0.9",
     "expo-auth-session": "~6.1.5",
     "expo-camera": "~16.1.8",
