--- a/api/package.json
+++ b/api/package.json
@@ -16,7 +16,7 @@
     "dotenv": "^16.5.0",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "mongodb": "4.1",
+    "mongodb": "^6.17.0",
     "mongoose": "^8.3.0",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0"
