--- a/api/package.json
+++ b/api/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^8.3.0",
     "multer": "^2.0.1",
     "nodemailer": "^6.9.13",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "twilio": "^5.7.1"
   }
 }
