--- a/package.json
+++ b/package.json
@@ -38,8 +38,7 @@
   "dependencies": {
     "@expo/config-plugins": "~10.0.0",
     "@expo/vector-icons": "^14.1.0",
-    "@google-cloud/vision": "^5.1.0",
-    "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/slider": "4.5.6",
     "@react-native-cookies/cookies": "^6.2.1",
     "@react-native-google-signin/google-signin": "^13.2.0",
@@ -48,23 +47,16 @@
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.9.13",
-    "@react-navigation/stack": "^6.3.16",
-    "@reduxjs/toolkit": "^2.8.2",
-    "@tensorflow-models/coco-ssd": "^2.2.3",
-    "@tensorflow-models/mobilenet": "^2.1.1",
-    "@tensorflow/tfjs": "^4.22.0",
-    "@tensorflow/tfjs-react-native": "^1.0.0",
-    "aws-sdk": "^2.1692.0",
+    "@react-navigation/stack": "^7.2.10",
+    "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.8.4",
-    "bcrypt": "^5.1.1",
     "cacache": "^19.0.1",
     "clarifai": "^2.9.1",
     "cloudinary": "^2.4.0",
-    "cors": "^2.8.5",
     "deprecated-react-native-prop-types": "^5.0.0",
     "expo": "53.0.9",
     "expo-auth-session": "~6.1.5",
-    "expo-camera": "~16.1.8",
+    "expo-camera": "~16.1.6",
     "expo-crypto": "~14.1.4",
     "expo-dev-client": "~5.1.8",
     "expo-document-picker": "~13.1.5",
@@ -73,7 +65,7 @@
     "expo-image-manipulator": "~13.1.7",
     "expo-image-picker": "~16.1.4",
     "expo-module-scripts": "^4.0.4",
-    "expo-modules-core": "~2.4.0",
+    "expo-modules-core": "^2.4.0",
     "expo-random": "^14.0.1",
     "expo-splash-screen": "~0.30.8",
     "expo-status-bar": "~2.2.3",
@@ -86,16 +78,9 @@
     "jwt-decode": "^4.0.0",
     "kmeans": "^0.0.1",
     "lottie-react-native": "7.2.2",
-    "mongoose": "^8.13.2",
-    "mongoose-fuzzy-searching": "^2.0.2",
-    "multer-storage-cloudinary": "^4.0.0",
-    "ngrok": "^5.0.0-beta.2",
-    "passport": "^0.7.0",
-    "passport-facebook": "^3.0.0",
-    "passport-google-oauth20": "^2.0.0",
+    "nativewind": "^4.1.23",
     "png-js": "^1.0.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "19.0.0",
     "react-native": "^0.79.2",
     "react-native-animatable": "^1.4.0",
     "react-native-canvas": "^0.1.40",
@@ -135,8 +120,9 @@
     "@babel/core": "^7.26.0",
     "@react-native-community/cli": "^18.0.0",
     "@react-native/codegen": "^0.79.2",
-    "depcheck": "^1.4.7",
-    "patch-package": "^8.0.0"
+    "patch-package": "^8.0.0",
+    "prettier-plugin-tailwindcss": "^0.5.14",
+    "tailwindcss": "^3.4.17"
   },
   "private": true,
   "description": "My First React Native Project",
