--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "axios": "^1.8.4",
     "cacache": "^19.0.1",
     "clarifai": "^2.9.1",
-    "cloudinary": "^2.4.0",
+    "cloudinary": "^2.7.0",
     "deprecated-react-native-prop-types": "^5.0.0",
     "expo": "53.0.9",
     "expo-auth-session": "~6.1.5",
@@ -78,6 +78,8 @@
     "jwt-decode": "^4.0.0",
     "kmeans": "^0.0.1",
     "lottie-react-native": "7.2.2",
+    "multer": "^2.0.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "nativewind": "^4.1.23",
     "png-js": "^1.0.0",
     "react": "19.0.0",
