--- a/api/package.json
+++ b/api/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.2",
+    "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.19.2",
@@ -20,6 +21,7 @@
     "mongodb": "^6.17.0",
     "mongoose": "^8.3.0",
     "multer": "^2.0.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
     "twilio": "^5.7.1"
